alterado data de extensoes profissionais

--- a/index.portifolioerika.html
+++ b/index.portifolioerika.html
@@ -15,7 +15,7 @@
     <div class="header">
       <h1><strong>ERIKA FARIA PICCOLO BUENO</h1></strong>
       <h3>Técnica em Farmácia</h3>
-      <a href="#" class="btn">Baixar Currículo</a>
+      <a href="Erika_FariaPiccoloBueno_Currículo.pdf" class="btn">Baixar Currículo</a>
     </div>
     <img src="/images/erikaportfolio.jpeg" class="foto-portfolio" alt="Erika">
 
@@ -69,7 +69,7 @@
         <li>Farmácia Hospitalar a dispensação e a Segurança do Paciente</li>
         <p>De 09/2024 a 10/2024</p>
         <li>Formação em Noções Básicas de Primeiros Socorros</li>
-        <p>Em bebês e crianças de 0 a 5 anos, conforme diretrizes estabelecidas pela Lei Lucas 13.722/2018.</p>
+        <p>Em bebês e crianças de 0 a 5 anos, conforme diretrizes estabelecidas pela Lei Lucas 13.722/2018. Realizado em 05/2024</p>
       </ul>
     </div>
 
