5. alteracao do caminho das pastas
retirei a barra do inicio do caminhos pois estava buscando a pasta em outro projeto

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Técnica em Farmácia</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/6303676-farmacia-logo-modelo-icone-simbolo-design-gratis-vetor.ico" type="image/x-icon">
 </head>
 
 <body>
   <header>
-    <img src="/images/pharmacylogo.png" alt="logo" class="logo">
+    <img src="images/pharmacylogo.png" alt="logo" class="logo">
     <div class="header">
       <h1><strong>ERIKA FARIA PICCOLO BUENO</h1></strong>
       <h3>Técnica em Farmácia</h3>
       <a href="Erika_FariaPiccoloBueno_Currículo.pdf" class="btn">Baixar Currículo</a>
     </div>
-    <img src="/images/erikaportfolio.jpeg" class="foto-portfolio" alt="Erika">
+    <img src="images/erikaportfolio.jpeg" class="foto-portfolio" alt="Erika">
 
   </header>
 
@@ -111,18 +111,18 @@
       <p>Registros de atividades e simulações técnicas realizadas durante o curso técnico:</p>
 
       <div class="galeria">
-        <video src="/images/laboratoriotecnico2.mp4" controls></video>
-        <video src="/images/laboratoriotecnico4.mp4" controls></video>
-        <video src="/images/laboratoriotecnico3.mp4" controls></video>
-        <img src="/images/trabalhocuidadospaleativostecnico.jpeg" alt="Simulação 2">
+        <video src="images/laboratoriotecnico2.mp4" controls></video>
+        <video src="images/laboratoriotecnico4.mp4" controls></video>
+        <video src="images/laboratoriotecnico3.mp4" controls></video>
+        <img src="images/trabalhocuidadospaleativostecnico.jpeg" alt="Simulação 2">
 
         <p>Registros de atividades e simulações técnicas realizadas durante o curso Senac- Manipulação:</p>
-        <video src="/images/manipulacaosenac.mp4" controls></video>
-        <img src="/images/manipulacaosenac2.jpeg" alt="Simulação 2">
-        <img src="/images/manipulacaosenac3.jpeg" alt="Simulação 1">
-        <img src="/images/manipulacaosenac4.jpeg" alt="Simulação 2">
+        <video src="images/manipulacaosenac.mp4" controls></video>
+        <img src="images/manipulacaosenac2.jpeg" alt="Simulação 2">
+        <img src="images/manipulacaosenac3.jpeg" alt="Simulação 1">
+        <img src="images/manipulacaosenac4.jpeg" alt="Simulação 2">
         <p>Registros de atividades e simulações técnicas realizadas durante o Estágio:</p>
-        <img src="/images/estagiohospitalsantaclara.jpeg" alt="Controle de estoque">
+        <img src="images/estagiohospitalsantaclara.jpeg" alt="Controle de estoque">
       </div>
     </div>
 
@@ -131,10 +131,10 @@
       <h2>Contato</h2>
       <div class="redes-sociais">
         <a href="https://www.linkedin.com/in/erika-faria-piccolo-bueno-0499a920b"> <img
-            src="/images/icons8-linkedin-48.png"></a>
+            src="images/icons8-linkedin-48.png"></a>
         <a href="https://wa.me/5511939055322?text=Ol%C3%A1%20Erika%2C%20vimos%20seu%20portf%C3%B3lio%2C%20e%20gostar%C3%ADamos%20de%20conversar%20sobre%20uma%20oportunidade%20de%20emprego."
-          target="_blank"><img src="/images/icons8-whatsapp-48.png"></a>
-        <a href="mailto:ggpiccolo2504@gmail.com"><img src="/images/icons8-mensagem-48.png"></a>
+          target="_blank"><img src="images/icons8-whatsapp-48.png"></a>
+        <a href="mailto:ggpiccolo2504@gmail.com"><img src="images/icons8-mensagem-48.png"></a>
 
       </div>
   </section>
