6. alteracao de curriculo
adicionado link de portfolio ao curriculo que está atrelado ao portfolio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
       <h1><strong>ERIKA FARIA PICCOLO BUENO</h1></strong>
       <h3>Técnica em Farmácia</h3>
-      <a href="Erika_FariaPiccoloBueno_Currículo.pdf" class="btn">Baixar Currículo</a>
+      <a href="Erika_FariaPiccoloBueno_Currículo-2.pdf" class="btn">Baixar Currículo</a>
     </div>
     <img src="images/erikaportfolio.jpeg" class="foto-portfolio" alt="Erika">
 
