--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <ul>
         <li>Hospital Santa Clara</li>
         <p>Estágio Supervisionado de 120h na Farmácia Central, e nas Farmácias Satélites.</p>
+        <p>De 09/2024 a 10/2024</p>
 
       </ul>
     </div>
@@ -54,8 +55,9 @@
     <div class="card">
       <h2>Formação</h2>
       <ul>
-        <li>Técnico em Farmácia - Escola SENAC - Concluído em junho de 2025</li>
+        <li>Técnico em Farmácia - Escola 24 de Maio - Concluído em junho de 2025</li>
         <li>Licenciatura em Pedagogia- UNIVESP - Cursando</li>
+        <p>Início 07/2025 - atual</p>
       </ul>
     </div>
 
